--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ path.current-floor {
   text-transform: uppercase;
 }
 
-.counter {
+.floor-counter {
   font-family: "Bebas Neue Cyrillic", sans-serif;
   color: #635854;
   font-size: 124px;
@@ -137,4 +137,179 @@ path.current-floor {
   color: #fff;
   padding: 16px 36px;
   cursor: pointer;
+}
+
+.modal {
+  position: fixed; /*фиксированная позиция, поверх всего сайта*/
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex; /*родительский элемент - гибкий*/
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transform: scale(0);
+  transition: opacity 0.2s;
+}
+
+.is-open {
+  opacity: 1;
+  transform: scale(1);
+}
+.modal-dialog {
+  max-width: 1000px;
+  min-height: 565px;
+  background-color: #fff;
+  flex-grow: 1;
+  display: flex;
+  opacity: 0;
+  position: relative;
+  transform: translateY(-10%);
+  transition: transform 0.2s, opacity 0.2s;
+  transition-delay: 0.2s;
+}
+
+.is-open > .modal-dialog {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.modal-image {
+  background-color: #ebebeb;
+  width: 60%;
+  text-align: center;
+  padding: 50px;
+}
+
+.flats path {
+  opacity: 0;
+  cursor: pointer;
+}
+
+.flats path:hover {
+  opacity: 1;
+}
+
+.modal-title {
+  font-family: "Bebas Neue Cyrillic", sans-serif;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 24px;
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 25px;
+}
+
+.modal-info {
+  width: 40%;
+  padding: 50px 46px;
+}
+
+.modal-alert {
+  font-family: Roboto;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  color: #635854;
+  margin-top: 56px;
+}
+
+.flat-list {
+  padding: 0;
+  list-style: none;
+  margin-top: 55px;
+}
+
+.flat-item {
+  margin-bottom: 10px;
+}
+
+.flat-link {
+  text-decoration: none;
+  font-size: 16px;
+  line-height: 19px;
+  color: #635854;
+}
+
+.flat-link:hover {
+  text-decoration: underline;
+  color: #3596f5;
+}
+
+.modal-close-button {
+  position: absolute;
+  right: 27px;
+  top: 38px;
+  border: none;
+  background: #fff;
+  cursor: pointer;
+}
+
+.footer {
+  background: #d7d7d7;
+  color: #635854;
+  border-top: 4px solid #3596f5;
+  margin-top: 93px;
+}
+
+.footer-info {
+  max-width: 1280px;
+  margin: auto;
+  padding-top: 56px;
+  padding-bottom: 56px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-text {
+  font-size: 14px;
+  margin: 0;
+  margin-bottom: 5px;
+}
+
+.phone {
+  display: flex;
+  flex-direction: column;
+  margin-left: 37px;
+  margin-right: 63px;
+}
+
+.footer-phone {
+  font-size: 17px;
+  font-weight: 700;
+  margin: 0;
+  color: #635854;
+  text-decoration: none;
+}
+
+.social {
+  display: flex;
+}
+
+.social img {
+  margin-right: 20px;
+}
+
+.footer-item {
+  list-style-type: none;
+  display: inline-block;
+  margin-left: 20px;
+}
+
+.footer-links {
+  margin: 0;
+  padding: 0;
+}
+
+.footer-link {
+  color: #635854;
+}
+
+.footer-wrap {
+  display: flex;
+  align-items: center;
 }
